# rust-xp-aipack-server

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
crates/libs/lib-acs-macros/: Cargo.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/model/: error.rs  mod.rs  org.rs  pack.rs  pack_version.rs  prlink.rs  user.rs  user_org.rs
crates/libs/lib-core/src/model/acs/: access.rs  access_org.rs  mod.rs  prelude.rs  role_config.rs  types.rs
crates/libs/lib-core/src/model/base/: crud_fns.rs  macro_utils.rs  mod.rs  scoped.rs  utils.rs
crates/libs/lib-web/: Cargo.toml
crates/services/web-server/: Cargo.toml
frontends/_common/: tsconfig.json
frontends/_common/pcss/: common-all.pcss  common-colors.pcss  d-ui-hack.pcss  d-ui.pcss  fonts.pcss  mixins-elevations.pcss  mixins-typography.pcss  mixins-utils.pcss  ui-breadcrumbs.pcss  ui-button.pcss  ui-card.pcss  ui-dialog.pcss  (+10 more)
frontends/web/: pcss.config.js  rollup.config.js  tsconfig.json
guide/: base.md
guide/server/: _README.md  add-relation-for-one-to-many.md  many-2-many-implement-tips.md
guide/webui/: _README.md  buttons-best-practice.md  dialog-best-practice.md  form-best-practice.md  many-2-many-implement-tips.md  table-best-practice.md  views-best-practice.md
scripts/: cmd-build.ts
sql/dev_initial/: 01-create-schema.sql  02-dev-seed.sql
web-folder/: email-tmpl.html  index.html  pwd-reset.html
(+190 files in other folders)
